packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_in_list_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 8,
    "width": 64.56,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      8,
      16
    ],
    "items": 5,
    "width": 35.68,
    "height": 22.4,
    "x": 18.8,
    "y": 21.76
  },
  {
    "range": [
      18,
      45
    ],
    "items": 10,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 62.08
  }
]
