packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_inline_raw_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      25
    ],
    "items": 8,
    "width": 75.76,
    "height": 67.2,
    "x": 0.0,
    "y": 39.68
  },
  {
    "range": [
      27,
      54
    ],
    "items": 5,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 124.8
  }
]
