packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_inline_raw_eof_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      26
    ],
    "items": 10,
    "width": 92.16,
    "height": 75.78,
    "x": 0.0,
    "y": 39.68
  }
]
