packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_inline_raw_eof_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 26,
      "end": 26
    },
    "severity": "warning",
    "message": "unclosed raw text; inserted a closing backtick",
    "hints": []
  }
]
