packages/engine/src/tests/snapshots/engine__tests__partition__broken_math_call_underscore_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      73
    ],
    "items": 20,
    "width": 94.64,
    "height": 288.08,
    "x": 0.0,
    "y": -0.64
  }
]
